<resources>
    <string name="app_name">RoomManagement</string>

    <!-- Navigation -->
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="Mobile_Number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="User_Name">UserName</string>
    <string name="User_Email">Email</string>
    <string name="Reason">Reason</string>
    <string name="Amount">Amount</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Submit">Submit</string>
</resources>
