<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@drawable/bg_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                     />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout

                android:id="@+id/linearlayout_login"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:padding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Reason"
                    android:id="@+id/insert_saving_reason"/>

                <EditText
                    android:padding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Amount"
                    android:inputType="numberDecimal"
                    android:id="@+id/insert_saving_amount"/>

                <EditText
                    android:padding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Start_Date"
                    android:inputType="date"
                    android:id="@+id/insert_saving_sdate"/>

                <EditText
                    android:padding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/End_Date"
                    android:inputType="date"
                    android:id="@+id/insert_saving_edate"/>


                <Button
                    android:textColor="#ffffff"
                    android:background="@drawable/button_bg_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Submit"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btn_insert_saving"/>
            </LinearLayout>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/inset_spiner"></Spinner>



        </RelativeLayout>
    </ScrollView>
</layout>